kube/components/fq/gravitino/fq-gravitino-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fq-gravitino
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fq-gravitino
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fq-gravitino
    spec:
      containers:
      - name: fq-gravitino
        image: fq-gravitino:1.2.0
        ports: 
          - containerPort: 8090
        #command: ["/bin/sh", "-c", "sleep 600"]
        command: [ "/bin/sh", "-c" ]
        args:
          - |            
            export JAVA_OPTS="-Dcom.sun.management.jmxremote.port=9999 -XX:+UnlockExperimentalVMOptions -XX:-UseContainerSupport -Dcom.sun.management.jmxremote=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
            export JAVA_TOOL_OPTIONS="-Djdk.internal.platform.cgroupv2.disable=true"
            /opt/gravitino/bin/gravitino.sh run
        imagePullPolicy: IfNotPresent
