kube/components/fq/gravitino/fq-gravitino-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fq-gravitino
  labels:
    app: fq-gravitino
spec:
  type: NodePort
  ports:
    - name: https
      port: 8090
      targetPort: 8090
      nodePort: 30090
      protocol: TCP
  selector:
    app: fq-gravitino
