kube/components/fq/gravitino/fq-gravitino-ingress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fq-allow-internal-traffic-to-gravitino
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [ fq-gravitino, fq-minio, fq-mysql, fq-trino-coordinator, fq-gravitino-init-schema, openmetadata ] }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 8090
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8080
